april update to the news

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link href="/static/styles.css" rel="stylesheet"/>
   <!-- <link href="http://thomasf.github.io/solarized-css/solarized-light.min.css" rel="stylesheet"></link> -->
   <!-- <link href="http://thomasf.github.io/solarized-css/solarized-dark.min.css" rel="stylesheet"></link> -->
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+  <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&amp;family=Playfair+Display:ital,wght@0,400..900;1,400..900&amp;display=swap" rel="stylesheet"/>
  </head>
  <body>
   <header>
@@ -25,99 +31,99 @@
   </header>
   <div class="container frontpage">
    <div class="preview">
-    <a href="/articles/e1cf06724fb94e77be090350059d862f">
-     <img alt="article image" src="/articles/e1cf06724fb94e77be090350059d862f.png"/>
+    <a href="/articles/5b7f5828d1434f34915105030c1cde73">
+     <img alt="article image" src="/articles/5b7f5828d1434f34915105030c1cde73.png"/>
     </a>
-    <a href="/articles/e1cf06724fb94e77be090350059d862f">
+    <a href="/articles/5b7f5828d1434f34915105030c1cde73">
      <h1>
-      Rat Race: The Struggle for Educational Equity in Ratopolis
+      Ratopolis's Recycling Revolution: From Gutter to Glitter
      </h1>
      <p>
-      In the shadow of gleaming skyscrapers, young whiskers twitch with curiosity, but not all will find the same path to knowledge—this is the tail of educational equity in Ratopolis.
+      In Ratopolis, an extraordinary transformation has flipped the script on waste—turning what was once discarded into dazzling displays of innovation and sustainability. Explore the city's pioneering garbage recycling initiative and the journey towards a more sustainable future.
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/f043ae6d09364df9abdd05d888583972">
-     <img alt="article image" src="/articles/f043ae6d09364df9abdd05d888583972.png"/>
+    <a href="/articles/953ae47c83b2441ab2ca3852a5092779">
+     <img alt="article image" src="/articles/953ae47c83b2441ab2ca3852a5092779.png"/>
     </a>
-    <a href="/articles/f043ae6d09364df9abdd05d888583972">
+    <a href="/articles/953ae47c83b2441ab2ca3852a5092779">
      <h1>
-      Squeaky Clean: The Evolution of Rat Hygiene in Ratopolis
+      The Power Paws Behind the Throne: The Story of Ratopolis' Influential Women
      </h1>
      <p>
-      In Ratopolis, cleaner paws mean longer lives; recent studies show Ratopians are living longer than ever, thanks in part to innovative strides in citywide hygiene.
+      In the heart of Ratopolis, a revolution is underway, not with upheaval, but with the steadfast strides of its women, whose achievements have begun reshaping our society's future. This series celebrates the unsung heroines of Ratopolis, from the innovative corridors of science to the influential aisles of governance, showcasing their exceptional contributions that have often been overshadowed.
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/65d0cb5a783a42cb88763c44268f5902">
-     <img alt="article image" src="/articles/65d0cb5a783a42cb88763c44268f5902.png"/>
+    <a href="/articles/eb8484df13724b369f4335d5d474b6ac">
+     <img alt="article image" src="/articles/eb8484df13724b369f4335d5d474b6ac.png"/>
     </a>
-    <a href="/articles/65d0cb5a783a42cb88763c44268f5902">
+    <a href="/articles/eb8484df13724b369f4335d5d474b6ac">
      <h1>
-      Seismic Shifts and Uncertain Futures: The Controversy Unfolding in Ratopolis City Council
+      Under the Stars Above: The Growing Influence of Astrology in Rat Culture
      </h1>
      <p>
-      As seismic shifts rattle the very pillars of Ratopolis city council, concerns buzz among citizens facing an uncertain political future, amid scrambles for power that could redefine governance and life here. Within this hive of activity, I, Whisker Walters, your trusted chronicler of council affairs, peel back the layers of this boiling controversy to bring light to the whisperings and worries of Ratopolis.
+      In Ratopolis, a blend of ancient wisdom and modern curiosity is sparking a stellar trend—astrology is not only guiding personal decisions and relationships, but is also reshaping public celebrations. This cultural shift, powered by the cosmic curiosity of its citizens, has seen a remarkable surge in both practitioners and followers, promising a future where decisions, big and small, are influenced by the stars above.
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/a8110a52f88c48358db9ab1e41b6faed">
-     <img alt="article image" src="/articles/a8110a52f88c48358db9ab1e41b6faed.png"/>
+    <a href="/articles/bc756fa3164146009aaf5993fb15dc9e">
+     <img alt="article image" src="/articles/bc756fa3164146009aaf5993fb15dc9e.png"/>
     </a>
-    <a href="/articles/a8110a52f88c48358db9ab1e41b6faed">
+    <a href="/articles/bc756fa3164146009aaf5993fb15dc9e">
      <h1>
-      The Vibrant Street Art of Ratopolis
+      Ratopolis's Silent Epidemic: Mental Health Struggles in the Urban Jungle
      </h1>
      <p>
-      In the bustling burrows of Ratopolis, a new tapestry is being woven by street artists who dare to dream out loud. This article explores the cultural revolution of street art in Ratopolis and its impact on the city.
+      In Ratopolis, a silent epidemic brews under the bustling city life as rats grapple with rising mental health issues, from pervasive anxiety to deep-seated depression, driven by the relentless pace and pressures of urban living. This pressing crisis calls for a united front to foster support, break stigmas, and explore innovative solutions.
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/74d119181a3f476c92bb27a013fcc217">
-     <img alt="article image" src="/articles/74d119181a3f476c92bb27a013fcc217.png"/>
+    <a href="/articles/c7fe94a140994591b5815b17562b27af">
+     <img alt="article image" src="/articles/c7fe94a140994591b5815b17562b27af.png"/>
     </a>
-    <a href="/articles/74d119181a3f476c92bb27a013fcc217">
+    <a href="/articles/c7fe94a140994591b5815b17562b27af">
      <h1>
-      Twitch Smatchett: The Celebrity Chef Who’s Cooking Up a Storm
+      The Cheese Crisis in Ratopolis
      </h1>
      <p>
-      In the heart of Ratopolis, Twitch Smatchett is stirring more than just his exotic sauces; he's blending tradition with revolution, crafting a culinary renaissance that tantalizes the whiskers of food lovers citywide.
+      Ratopolis faces a dire shortage of cheese, leading to economic turmoil and societal challenges. The article explores the root causes of the crisis, its impact on the community, and the innovative solutions being pursued.
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/f33be45065b84d6bbc256f72caff5456">
-     <img alt="article image" src="/articles/f33be45065b84d6bbc256f72caff5456.png"/>
+    <a href="/articles/3142ca8cb3f845a9a90aba78a1cb8f02">
+     <img alt="article image" src="/articles/3142ca8cb3f845a9a90aba78a1cb8f02.png"/>
     </a>
-    <a href="/articles/f33be45065b84d6bbc256f72caff5456">
+    <a href="/articles/3142ca8cb3f845a9a90aba78a1cb8f02">
      <h1>
-      A Whisker in Every Pot: Rat Chefs Spice Up Ratopolis
+      Unveiling the Secrets of Ratopolis's Sewer System
      </h1>
      <p>
-      The bustling kitchens of Ratopolis are home to unsung heroes - rat chefs who are transforming the city's food scene with their gusto and innovation. This article explores the culinary virtuosos and their delectable creations that celebrate the rich rat culture.
+      Delve into the depths of Ratopolis's sewer system to uncover its crucial role, challenges, and unsung heroes.
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/8062ac9041b04de49ba40e7867ea0deb">
-     <img alt="article image" src="/articles/8062ac9041b04de49ba40e7867ea0deb.png"/>
+    <a href="/articles/fffe8f60f191491ca68ccda86d7e4aec">
+     <img alt="article image" src="/articles/fffe8f60f191491ca68ccda86d7e4aec.png"/>
     </a>
-    <a href="/articles/8062ac9041b04de49ba40e7867ea0deb">
+    <a href="/articles/fffe8f60f191491ca68ccda86d7e4aec">
      <h1>
-      The Epic Rivalry Between Team Squeak and Claw United
+      Rats and Mice Forge Bonds in Ratopolis: A Story of Unity and Cooperation
      </h1>
      <p>
-      In the bustling alleys of Ratopolis, the age-old sports rivalry between Team Squeak and Claw United heats up again, promising a fierce battle that stirs hearts and ignites fiery debates across squeaky and clawed factions of fans. As the city braces for the next epic showdown, the question looms: which team will claw their way to victory and squeak out a spot in history?
+      In Ratopolis, a city known for its bustling markets and towering cheesecakes, a quiet evolution brews as rats and mice forge bonds that could be the blueprint for interspecies harmony. This article explores how mutual respect and shared goals are transcending size and stereotypes, turning old foes into new allies.
      </p>
     </a>
    </div>
@@ -125,7 +131,7 @@
   </div>
   <footer>
    <p>
-    © 2023 RatNewsNetwork. All rights reserved.
+    AI Generated. © 2024 RatNewsNetwork. All rights reserved.
    </p>
   </footer>
  </body>
