--- a/index.html
+++ b/index.html
@@ -31,99 +31,71 @@
   </header>
   <div class="container frontpage">
    <div class="preview">
-    <a href="/articles/5b7f5828d1434f34915105030c1cde73">
-     <img alt="article image" src="/articles/5b7f5828d1434f34915105030c1cde73.png"/>
+    <a href="/articles/190b537f-d6b3-494b-aea5-6b1b0bd48670">
+     <img alt="article image" src="/static/articles/06282024/190b537f-d6b3-494b-aea5-6b1b0bd48670.png"/>
     </a>
-    <a href="/articles/5b7f5828d1434f34915105030c1cde73">
+    <a href="/articles/190b537f-d6b3-494b-aea5-6b1b0bd48670">
      <h1>
-      Ratopolis's Recycling Revolution: From Gutter to Glitter
+      The Rodent Renaissance: Uncovering Ratopolis' Forgotten Art Scandal
      </h1>
      <p>
-      In Ratopolis, an extraordinary transformation has flipped the script on waste—turning what was once discarded into dazzling displays of innovation and sustainability. Explore the city's pioneering garbage recycling initiative and the journey towards a more sustainable future.
+      A century-old art forgery scandal has been hiding in plain sight in Ratopolis, threatening to topple the esteemed Ratopolis Art Guild.
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/953ae47c83b2441ab2ca3852a5092779">
-     <img alt="article image" src="/articles/953ae47c83b2441ab2ca3852a5092779.png"/>
+    <a href="/articles/1b4f23b7-418b-4507-a7d8-7ebd717e49ff">
+     <img alt="article image" src="/static/articles/06282024/1b4f23b7-418b-4507-a7d8-7ebd717e49ff.png"/>
     </a>
-    <a href="/articles/953ae47c83b2441ab2ca3852a5092779">
+    <a href="/articles/1b4f23b7-418b-4507-a7d8-7ebd717e49ff">
      <h1>
-      The Power Paws Behind the Throne: The Story of Ratopolis' Influential Women
+      Burrowing Beneath the Surface: The Dark Side of Ratopolis' Affordable Housing Crisis
      </h1>
      <p>
-      In the heart of Ratopolis, a revolution is underway, not with upheaval, but with the steadfast strides of its women, whose achievements have begun reshaping our society's future. This series celebrates the unsung heroines of Ratopolis, from the innovative corridors of science to the influential aisles of governance, showcasing their exceptional contributions that have often been overshadowed.
+      Ratopolis' population surge has led to a housing crisis, with low-income rats forced to live in squalid conditions, while real estate moguls and politicians reap the benefits.
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/eb8484df13724b369f4335d5d474b6ac">
-     <img alt="article image" src="/articles/eb8484df13724b369f4335d5d474b6ac.png"/>
+    <a href="/articles/9c4ebd47-957b-470e-8b5c-6b6e47c24384">
+     <img alt="article image" src="/static/articles/06282024/9c4ebd47-957b-470e-8b5c-6b6e47c24384.png"/>
     </a>
-    <a href="/articles/eb8484df13724b369f4335d5d474b6ac">
+    <a href="/articles/9c4ebd47-957b-470e-8b5c-6b6e47c24384">
      <h1>
-      Under the Stars Above: The Growing Influence of Astrology in Rat Culture
+      The Great Cheese Heist: Unraveling the Mystery of Ratopolis' Most Infamous Culinary Crime
      </h1>
      <p>
-      In Ratopolis, a blend of ancient wisdom and modern curiosity is sparking a stellar trend—astrology is not only guiding personal decisions and relationships, but is also reshaping public celebrations. This cultural shift, powered by the cosmic curiosity of its citizens, has seen a remarkable surge in both practitioners and followers, promising a future where decisions, big and small, are influenced by the stars above.
+      The city's most prized cheese reserve has vanished, leaving a trail of crumbly clues and furious foodies in its wake, and Ratopolis is abuzz with the question: who dared to pull off the Great Cheese Heist?
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/bc756fa3164146009aaf5993fb15dc9e">
-     <img alt="article image" src="/articles/bc756fa3164146009aaf5993fb15dc9e.png"/>
+    <a href="/articles/be6afa72-ed15-4ed5-80f4-7d1556deefda">
+     <img alt="article image" src="/static/articles/06282024/be6afa72-ed15-4ed5-80f4-7d1556deefda.png"/>
     </a>
-    <a href="/articles/bc756fa3164146009aaf5993fb15dc9e">
+    <a href="/articles/be6afa72-ed15-4ed5-80f4-7d1556deefda">
      <h1>
-      Ratopolis's Silent Epidemic: Mental Health Struggles in the Urban Jungle
+      Paws Across Borders: The Ratopolis Refugees' Quest for a Safe Haven
      </h1>
      <p>
-      In Ratopolis, a silent epidemic brews under the bustling city life as rats grapple with rising mental health issues, from pervasive anxiety to deep-seated depression, driven by the relentless pace and pressures of urban living. This pressing crisis calls for a united front to foster support, break stigmas, and explore innovative solutions.
+      Thousands of rats flee war, persecution, and natural disasters in neighboring cities, seeking asylum in Ratopolis, but face challenges in finding a sense of belonging in a city torn between compassion and xenophobia.
      </p>
     </a>
    </div>
    <hr/>
    <div class="preview">
-    <a href="/articles/c7fe94a140994591b5815b17562b27af">
-     <img alt="article image" src="/articles/c7fe94a140994591b5815b17562b27af.png"/>
+    <a href="/articles/56517ff8-bf4d-4596-b5a1-c062e5affc5f">
+     <img alt="article image" src="/static/articles/06282024/56517ff8-bf4d-4596-b5a1-c062e5affc5f.png"/>
     </a>
-    <a href="/articles/c7fe94a140994591b5815b17562b27af">
+    <a href="/articles/56517ff8-bf4d-4596-b5a1-c062e5affc5f">
      <h1>
-      The Cheese Crisis in Ratopolis
+      The Whisker-ed Whistleblower: Exposing Ratopolis' Toxic Waste Cover-Up
      </h1>
      <p>
-      Ratopolis faces a dire shortage of cheese, leading to economic turmoil and societal challenges. The article explores the root causes of the crisis, its impact on the community, and the innovative solutions being pursued.
-     </p>
-    </a>
-   </div>
-   <hr/>
-   <div class="preview">
-    <a href="/articles/3142ca8cb3f845a9a90aba78a1cb8f02">
-     <img alt="article image" src="/articles/3142ca8cb3f845a9a90aba78a1cb8f02.png"/>
-    </a>
-    <a href="/articles/3142ca8cb3f845a9a90aba78a1cb8f02">
-     <h1>
-      Unveiling the Secrets of Ratopolis's Sewer System
-     </h1>
-     <p>
-      Delve into the depths of Ratopolis's sewer system to uncover its crucial role, challenges, and unsung heroes.
-     </p>
-    </a>
-   </div>
-   <hr/>
-   <div class="preview">
-    <a href="/articles/fffe8f60f191491ca68ccda86d7e4aec">
-     <img alt="article image" src="/articles/fffe8f60f191491ca68ccda86d7e4aec.png"/>
-    </a>
-    <a href="/articles/fffe8f60f191491ca68ccda86d7e4aec">
-     <h1>
-      Rats and Mice Forge Bonds in Ratopolis: A Story of Unity and Cooperation
-     </h1>
-     <p>
-      In Ratopolis, a city known for its bustling markets and towering cheesecakes, a quiet evolution brews as rats and mice forge bonds that could be the blueprint for interspecies harmony. This article explores how mutual respect and shared goals are transcending size and stereotypes, turning old foes into new allies.
+      A courageous insider has come forward with damning evidence of rampant pollution in Ratopolis' industrial sector, threatening the health and safety of the city's citizens.
      </p>
     </a>
    </div>
