updates to today's news

--- a/index.html
+++ b/index.html
@@ -30,9 +30,27 @@
    </div>
   </header>
   <div class="container frontpage">
-   <div class="preview">
+
+    <div class="preview">
+        <a href="/articles/rat-hole-op-ed.bmp">
+         <img alt="article image" src="/articles/rat-hole-op-ed.bmp"/>
+        </a>
+        <a href="/articles/rat-hole-op-ed">
+         <h1>
+            RNN's Refusal to Cover Chicago's Rat-Hole
+         </h1>
+         <!-- q: how do i change the font size in-line> -->
+         <!-- a: use the style attribute, e.g. <i style="font-size: 12px"> -->
+        <i style="font-size: 16px">In Chicago's Concrete, a Rat-shaped Void; RNN's Silence, a Story Destroyed.</i>
+         <p>
+             The rat-shaped hole in the heart of Chicago symbolizes the urban resilience and ingenuity of our species. The network's omission of this monument raises questions about their commitment to capturing the essence of the rat experience.
+         </p>
+        </a>
+       </div>
+       <hr/>
+       <div class="preview">
     <a href="/articles/190b537f-d6b3-494b-aea5-6b1b0bd48670">
-     <img alt="article image" src="/static/articles/06282024/190b537f-d6b3-494b-aea5-6b1b0bd48670.png"/>
+     <img alt="article image" src="/articles/190b537f-d6b3-494b-aea5-6b1b0bd48670.png"/>
     </a>
     <a href="/articles/190b537f-d6b3-494b-aea5-6b1b0bd48670">
      <h1>
@@ -46,7 +64,7 @@
    <hr/>
    <div class="preview">
     <a href="/articles/1b4f23b7-418b-4507-a7d8-7ebd717e49ff">
-     <img alt="article image" src="/static/articles/06282024/1b4f23b7-418b-4507-a7d8-7ebd717e49ff.png"/>
+     <img alt="article image" src="/articles/1b4f23b7-418b-4507-a7d8-7ebd717e49ff.png"/>
     </a>
     <a href="/articles/1b4f23b7-418b-4507-a7d8-7ebd717e49ff">
      <h1>
@@ -60,7 +78,7 @@
    <hr/>
    <div class="preview">
     <a href="/articles/9c4ebd47-957b-470e-8b5c-6b6e47c24384">
-     <img alt="article image" src="/static/articles/06282024/9c4ebd47-957b-470e-8b5c-6b6e47c24384.png"/>
+     <img alt="article image" src="/articles/9c4ebd47-957b-470e-8b5c-6b6e47c24384.png"/>
     </a>
     <a href="/articles/9c4ebd47-957b-470e-8b5c-6b6e47c24384">
      <h1>
@@ -74,7 +92,7 @@
    <hr/>
    <div class="preview">
     <a href="/articles/be6afa72-ed15-4ed5-80f4-7d1556deefda">
-     <img alt="article image" src="/static/articles/06282024/be6afa72-ed15-4ed5-80f4-7d1556deefda.png"/>
+     <img alt="article image" src="/articles/be6afa72-ed15-4ed5-80f4-7d1556deefda.png"/>
     </a>
     <a href="/articles/be6afa72-ed15-4ed5-80f4-7d1556deefda">
      <h1>
@@ -88,7 +106,7 @@
    <hr/>
    <div class="preview">
     <a href="/articles/56517ff8-bf4d-4596-b5a1-c062e5affc5f">
-     <img alt="article image" src="/static/articles/06282024/56517ff8-bf4d-4596-b5a1-c062e5affc5f.png"/>
+     <img alt="article image" src="/articles/56517ff8-bf4d-4596-b5a1-c062e5affc5f.png"/>
     </a>
     <a href="/articles/56517ff8-bf4d-4596-b5a1-c062e5affc5f">
      <h1>
