--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          </h1>
          <!-- q: how do i change the font size in-line> -->
          <!-- a: use the style attribute, e.g. <i style="font-size: 12px"> -->
-        <i style="font-size: 16px">In Chicago's Concrete, a Rat-shaped Void; RNN's Silence, a Story Destroyed.</i>
+        <i style="font-size: 16px">Op-ed: In Chicago's Concrete, a Rat-shaped Void; RNN's Silence, a Story Destroyed.</i>
          <p>
              The rat-shaped hole in the heart of Chicago symbolizes the urban resilience and ingenuity of our species. The network's omission of this monument raises questions about their commitment to capturing the essence of the rat experience.
          </p>
