--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <link href="https://fonts.googleapis.com" rel="preconnect"/>
   <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
   <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&amp;family=Playfair+Display:ital,wght@0,400..900;1,400..900&amp;display=swap" rel="stylesheet"/>
+  <!-- Google tag (gtag.js) -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-76T6H7WDC6">
+  </script>
+  <script>
+   window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-76T6H7WDC6');
+  </script>
  </head>
  <body>
   <header>
@@ -30,94 +40,84 @@
    </div>
   </header>
   <div class="container frontpage">
-
-    <div class="preview">
-        <a href="/articles/rat-hole-op-ed.bmp">
-         <img alt="article image" src="/articles/rat-hole-op-ed.bmp"/>
-        </a>
-        <a href="/articles/rat-hole-op-ed">
-         <h1>
-            RNN's Refusal to Cover Chicago's Rat-Hole
-         </h1>
-         <!-- q: how do i change the font size in-line> -->
-         <!-- a: use the style attribute, e.g. <i style="font-size: 12px"> -->
-        <i style="font-size: 16px">Op-ed: In Chicago's Concrete, a Rat-shaped Void; RNN's Silence, a Story Destroyed.</i>
-         <p>
-             The rat-shaped hole in the heart of Chicago symbolizes the urban resilience and ingenuity of our species. The network's omission of this monument raises questions about their commitment to capturing the essence of the rat experience.
-         </p>
-        </a>
-       </div>
-       <hr/>
-       <div class="preview">
-    <a href="/articles/190b537f-d6b3-494b-aea5-6b1b0bd48670">
-     <img alt="article image" src="/articles/190b537f-d6b3-494b-aea5-6b1b0bd48670.png"/>
-    </a>
-    <a href="/articles/190b537f-d6b3-494b-aea5-6b1b0bd48670">
-     <h1>
-      The Rodent Renaissance: Uncovering Ratopolis' Forgotten Art Scandal
-     </h1>
-     <p>
-      A century-old art forgery scandal has been hiding in plain sight in Ratopolis, threatening to topple the esteemed Ratopolis Art Guild.
-     </p>
-    </a>
-   </div>
-   <hr/>
    <div class="preview">
-    <a href="/articles/1b4f23b7-418b-4507-a7d8-7ebd717e49ff">
-     <img alt="article image" src="/articles/1b4f23b7-418b-4507-a7d8-7ebd717e49ff.png"/>
+    <a href="/articles/a3101208-174e-4cde-9468-8174aae11916">
+     <img alt="article image" src="/static/articles/07122024/a3101208-174e-4cde-9468-8174aae11916.png"/>
     </a>
-    <a href="/articles/1b4f23b7-418b-4507-a7d8-7ebd717e49ff">
+    <a href="/articles/a3101208-174e-4cde-9468-8174aae11916">
      <h1>
-      Burrowing Beneath the Surface: The Dark Side of Ratopolis' Affordable Housing Crisis
+      The Paw-some Predicament: Ratopolis' Feral Cat Controversy
      </h1>
      <p>
-      Ratopolis' population surge has led to a housing crisis, with low-income rats forced to live in squalid conditions, while real estate moguls and politicians reap the benefits.
+      As the sun sets over Ratopolis, a sense of unease settles over its residents - the city is grappling with a growing feral cat population that has sparked a heated debate on how to tackle the issue, pitting animal lovers against public health advocates and leaving many wondering: what's the solution to this whisker-ific predicament?
      </p>
     </a>
    </div>
-   <hr/>
    <div class="preview">
-    <a href="/articles/9c4ebd47-957b-470e-8b5c-6b6e47c24384">
-     <img alt="article image" src="/articles/9c4ebd47-957b-470e-8b5c-6b6e47c24384.png"/>
+    <a href="/articles/888a7ecc-d1a6-4712-a5ac-b14d3f61cfa7">
+     <img alt="article image" src="/static/articles/07122024/888a7ecc-d1a6-4712-a5ac-b14d3f61cfa7.png"/>
     </a>
-    <a href="/articles/9c4ebd47-957b-470e-8b5c-6b6e47c24384">
+    <a href="/articles/888a7ecc-d1a6-4712-a5ac-b14d3f61cfa7">
      <h1>
-      The Great Cheese Heist: Unraveling the Mystery of Ratopolis' Most Infamous Culinary Crime
+      Ratopolis Rhapsody: A Celebration of Intergenerational Storytelling
      </h1>
      <p>
-      The city's most prized cheese reserve has vanished, leaving a trail of crumbly clues and furious foodies in its wake, and Ratopolis is abuzz with the question: who dared to pull off the Great Cheese Heist?
+      Ratopolis has launched a groundbreaking initiative that bridges the gap between generations, preserving the city's rich cultural heritage for posterity - Rat Tales, a heartwarming program where elderly rats share their life stories with youngsters, fostering intergenerational bonding and historical preservation.
      </p>
     </a>
    </div>
-   <hr/>
    <div class="preview">
-    <a href="/articles/be6afa72-ed15-4ed5-80f4-7d1556deefda">
-     <img alt="article image" src="/articles/be6afa72-ed15-4ed5-80f4-7d1556deefda.png"/>
+    <a href="/articles/e40325e9-fa90-44ac-97b8-5b9fa71d20ba">
+     <img alt="article image" src="/static/articles/07122024/e40325e9-fa90-44ac-97b8-5b9fa71d20ba.png"/>
     </a>
-    <a href="/articles/be6afa72-ed15-4ed5-80f4-7d1556deefda">
+    <a href="/articles/e40325e9-fa90-44ac-97b8-5b9fa71d20ba">
      <h1>
-      Paws Across Borders: The Ratopolis Refugees' Quest for a Safe Haven
+      Rat Idol: The Rise of Novice Nova, Ratopolis' Newest Sensation
      </h1>
      <p>
-      Thousands of rats flee war, persecution, and natural disasters in neighboring cities, seeking asylum in Ratopolis, but face challenges in finding a sense of belonging in a city torn between compassion and xenophobia.
+      In a city where music is a staple of daily life, 19-year-old Novice Nova has emerged as the newest sensation, captivating audiences with her soulful voice and eclectic style, and selling out her debut album "Ratify" in record time, solidifying her position as the most talked-about artist in Ratopolis.
      </p>
     </a>
    </div>
-   <hr/>
    <div class="preview">
-    <a href="/articles/56517ff8-bf4d-4596-b5a1-c062e5affc5f">
-     <img alt="article image" src="/articles/56517ff8-bf4d-4596-b5a1-c062e5affc5f.png"/>
+    <a href="/articles/002fdabe-c68e-4446-beba-a001bb9fee20">
+     <img alt="article image" src="/static/articles/07122024/002fdabe-c68e-4446-beba-a001bb9fee20.png"/>
     </a>
-    <a href="/articles/56517ff8-bf4d-4596-b5a1-c062e5affc5f">
+    <a href="/articles/002fdabe-c68e-4446-beba-a001bb9fee20">
      <h1>
-      The Whisker-ed Whistleblower: Exposing Ratopolis' Toxic Waste Cover-Up
+      The Great River Revival: A New Era for Ratopolis' Waterways
      </h1>
      <p>
-      A courageous insider has come forward with damning evidence of rampant pollution in Ratopolis' industrial sector, threatening the health and safety of the city's citizens.
+      In a move that promises to transform the heart of Ratopolis, the city council has announced a staggering multi-million acorn investment to revitalize the city's polluted rivers, paving the way for a cleaner, healthier environment for residents and a boost to local businesses.
      </p>
     </a>
    </div>
-   <hr/>
+   <div class="preview">
+    <a href="/articles/36326b32-4041-40d0-b7fc-85f4705e3aec">
+     <img alt="article image" src="/static/articles/07122024/36326b32-4041-40d0-b7fc-85f4705e3aec.png"/>
+    </a>
+    <a href="/articles/36326b32-4041-40d0-b7fc-85f4705e3aec">
+     <h1>
+      Beyond the Burrow: Ratopolis' Hidden Gems for the Adventurous Rat
+     </h1>
+     <p>
+      Tired of the same old routine in Ratopolis? Look no further! Our city is full of hidden gems waiting to be discovered, offering endless opportunities for curious and adventurous rats to explore beyond their usual haunts.
+     </p>
+    </a>
+   </div>
+   <div class="preview">
+    <a href="/articles/4cfe4889-89f8-44c0-8be0-8f679d87b649">
+     <img alt="article image" src="/static/articles/07122024/4cfe4889-89f8-44c0-8be0-8f679d87b649.png"/>
+    </a>
+    <a href="/articles/4cfe4889-89f8-44c0-8be0-8f679d87b649">
+     <h1>
+      Tunnel Visionary: Entrepreneur Ratty Richmond Revolutionizes Commute with High-Speed Tunnel Network
+     </h1>
+     <p>
+      Ratty Richmond has unveiled a revolutionary high-speed tunnel network that could slash commute times in half and bring much-needed relief to Ratopolis' traffic-clogged roads.
+     </p>
+    </a>
+   </div>
   </div>
   <footer>
    <p>
