--- a/66081c59.html
+++ b/66081c59.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>{title} - Rat News Network</title>
+    <title>Opinion Piece: Addressing the Growing Divide in the Rat Education System - Rat News Network</title>
     <link href="static/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
@@ -34,12 +34,12 @@
 
     <!-- Sub-header -->
     <section class="sub-header">
+        <div class="submenu-button"><a href="https://tiktok.com/@ratnewsnetwork">RAT TV</a></div> 
+        <div class="submenu-button "><a href="http://www.tailegraph.co.uk/"><span class="hide-on-small">THE </span>TAILEGRAPH</a></div>
         <div class="submenu-button hide-on-small">BANKER RAT THINGS</div>
         <div class="submenu-button">RODENT READS</div>
-        <div class="submenu-button">RAT RIDES</div>
         <div class="submenu-button hide-on-small">WHISKER WAGERS</div>
-        <div class="submenu-button">RAT TV</div>
-        <div class="submenu-button no-right-border"><a href="http://www.tailegraph.co.uk/"><span class="hide-on-small">THE </span>TAILEGRAPH</a></div>
+        <div class="submenu-button no-right-border">RAT RIDES</div>
     </section>
 
     <main>
